[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

rocket = { version = "0.5.0", features = ["uuid", "json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_okapi = { version = "0.8.0", features = [
	"swagger",
	"uuid",
] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["chrono"] }
diesel = { version = "2.1.0" }
chrono =  { version = "0.4.34", features = ["serde"] }