[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }

async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
rocket = { version = "0.5.0", features = ["uuid", "json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "uuid", "rocket_db_pools"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid" ] }
sea-orm-rocket = { git = "https://github.com/SeaQL/sea-orm.git", branch = "master", features = ["rocket_okapi"]}
chrono = { version = "0.4.34", features = ["serde"] }
slug = "0.1.5"
blurhash = "0.2.1"
image = "0.24.9"
color-thief = "0.2"
colors-transform = "0.2.11"
webp = "0.2"
tempfile = "3.10.1"

[dev-dependencies]
once_cell = "1.9.0"
regex = "1.10.3"