[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["uuid"] }
serde = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }