[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.0.0"
rocket_sync_db_pools = { version = "0.1.0", features = [
	"diesel_postgres_pool",
] }
rocket_okapi = { version = "0.8.0", features = [
	"swagger",
	"uuid",
] }