[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = {version= "1.0", features = ["derive"]}
rocket_okapi = { version = "0.8.0", features = [
	"swagger",
	"uuid",
] }
schemars = { version = "0.8", features = [ "uuid1" ] }
chrono = "0.4.34"